// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint-friendly-formatter --eff-filter option should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     index.js:8:2

✘ 3 problems (0 errors, 1 warning)


Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: basic 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     expect is defined but never used


     /home/usr/roy/test/specs/index.js:3:6
   [0m [90m 1 | [39m[0m

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     /home/usr/roy/test/specs/index.js:4:6

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 5 problems (2 errors, 3 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  3  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: fatal 1`] = `
"

  ✘  http://eslint.org/docs/rules/

     Unexpected token {


     /home/usr/roy/index.js:3:13
   [0m [90m 1 | [39m[0m

✘ 1 problem (1 error, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/undefined"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: missing-line-column 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     /home/usr/roy/index.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: missing-messages 1`] = `
"

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 2 problems (2 errors, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: missing-rule-id 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: basic 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     expect is defined but never used


     /home/usr/roy/test/specs/index.js:3:6
   [0m [90m 1 | [39m[0m

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     /home/usr/roy/test/specs/index.js:4:6

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 5 problems (2 errors, 3 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  3  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: fatal 1`] = `
"

  ✘  http://eslint.org/docs/rules/

     Unexpected token {


     /home/usr/roy/index.js:3:13
   [0m [90m 1 | [39m[0m

✘ 1 problem (1 error, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/undefined"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: missing-line-column 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     /home/usr/roy/index.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: missing-messages 1`] = `
"

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 2 problems (2 errors, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: missing-rule-id 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter absolute paths to file, no gray should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter custom rules links open google search should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     index.js:8:2

  ✘  https://google.com/search?q=plugin-rule%2Fcurly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  https://google.com/search?q=react%2Fno-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  https://google.com/search?q=plugin-rule%2Fcurly
  1  https://google.com/search?q=react%2Fno-process-exit

Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: basic 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     index.js:8:2

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     expect is defined but never used


     test/specs/index.js:3:6
   [0m [90m 1 | [39m[0m

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     test/specs/index.js:4:6

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 5 problems (2 errors, 3 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  3  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: fatal 1`] = `
"

  ✘  http://eslint.org/docs/rules/

     Unexpected token {


     index.js:3:13
   [0m [90m 1 | [39m[0m

✘ 1 problem (1 error, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/undefined"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: missing-line-column 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     index.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     test/runner.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: missing-messages 1`] = `
"

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 2 problems (2 errors, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: missing-rule-id 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     index.js:8:2

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter formatter should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     index.js:8:2

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: basic 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     index.js:8:2

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     expect is defined but never used


     test/specs/index.js:3:6
   [0m [90m 1 | [39m[0m

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     test/specs/index.js:4:6

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 5 problems (2 errors, 3 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  3  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: fatal 1`] = `
"

  ✘  http://eslint.org/docs/rules/

     Unexpected token {


     index.js:3:13
   [0m [90m 1 | [39m[0m

✘ 1 problem (1 error, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/undefined"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: missing-line-column 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     index.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     test/runner.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: missing-messages 1`] = `
"

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 2 problems (2 errors, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: missing-rule-id 1`] = `
"

  ⚠  http://eslint.org/docs/rules/

     path is defined but never used


     index.js:8:2

  ✘  http://eslint.org/docs/rules/

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no gray should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars

     path is defined but never used


     index.js:8:2

  ✘  http://eslint.org/docs/rules/curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: basic 1`] = `
"

  ⚠  no-unused-vars

     path is defined but never used


     index.js:8:2

  ⚠  no-unused-vars

     expect is defined but never used


     test/specs/index.js:3:6
   [0m [90m 1 | [39m[0m

  ⚠  no-unused-vars

     path is defined but never used


     test/specs/index.js:4:6

  ✘  curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 5 problems (2 errors, 3 warnings)


Errors:
  1  curly
  1  no-process-exit

Warnings:
  3  no-unused-vars
"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: fatal 1`] = `
"

  ✘  

     Unexpected token {


     index.js:3:13
   [0m [90m 1 | [39m[0m

✘ 1 problem (1 error, 0 warnings)


Errors:
  1  undefined"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: missing-line-column 1`] = `
"

  ⚠  

     path is defined but never used


     index.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  

     Expected { after 'if' condition


     test/runner.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  undefined
  1  no-process-exit

Warnings:
  1  undefined
"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: missing-messages 1`] = `
"

  ✘  curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 2 problems (2 errors, 0 warnings)


Errors:
  1  curly
  1  no-process-exit"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: missing-rule-id 1`] = `
"

  ⚠  

     path is defined but never used


     index.js:8:2

  ✘  

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  undefined
  1  no-process-exit

Warnings:
  1  undefined
"
`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter no links to rules should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  no-unused-vars

     path is defined but never used


     index.js:8:2

  ✘  curly

     Expected { after 'if' condition


     test/runner.js:41:2

  ✘  no-process-exit

     Don't use process.exit(); throw an error instead


     test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  curly
  1  no-process-exit

Warnings:
  1  no-unused-vars
"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: basic 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars
     editor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=8&column=2

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ⚠  http://eslint.org/docs/rules/no-unused-vars
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Fspecs%2Findex.js&line=3&column=6

     expect is defined but never used


     /home/usr/roy/test/specs/index.js:3:6
   [0m [90m 1 | [39m[0m

  ⚠  http://eslint.org/docs/rules/no-unused-vars
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Fspecs%2Findex.js&line=4&column=6

     path is defined but never used


     /home/usr/roy/test/specs/index.js:4:6

  ✘  http://eslint.org/docs/rules/curly
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 5 problems (2 errors, 3 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  3  http://eslint.org/docs/rules/no-unused-vars
"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: fatal 1`] = `
"

  ✘  http://eslint.org/docs/rules/
     editor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=3&column=13

     Unexpected token {


     /home/usr/roy/index.js:3:13
   [0m [90m 1 | [39m[0m

✘ 1 problem (1 error, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/undefined"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: missing-line-column 1`] = `
"

  ⚠  http://eslint.org/docs/rules/
     editor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=0&column=0

     path is defined but never used


     /home/usr/roy/index.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=0&column=0

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:0:0
   [0m [90m 1 | [39m[0m

  ✘  http://eslint.org/docs/rules/no-process-exit
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: missing-messages 1`] = `
"

  ✘  http://eslint.org/docs/rules/curly
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 2 problems (2 errors, 0 warnings)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: missing-rule-id 1`] = `
"

  ⚠  http://eslint.org/docs/rules/
     editor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=8&column=2

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ✘  http://eslint.org/docs/rules/
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/undefined
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/undefined
"
`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: no-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: null-results-provided 1`] = `""`;

exports[`eslint-friendly-formatter scheme should produce the expected output for the given input: single-error 1`] = `
"

  ⚠  http://eslint.org/docs/rules/no-unused-vars
     editor://open?file=%2Fhome%2Fusr%2Froy%2Findex.js&line=8&column=2

     path is defined but never used


     /home/usr/roy/index.js:8:2

  ✘  http://eslint.org/docs/rules/curly
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=41&column=2

     Expected { after 'if' condition


     /home/usr/roy/test/runner.js:41:2

  ✘  http://eslint.org/docs/rules/no-process-exit
     editor://open?file=%2Fhome%2Fusr%2Froy%2Ftest%2Frunner.js&line=42&column=2

     Don't use process.exit(); throw an error instead


     /home/usr/roy/test/runner.js:42:2

✘ 3 problems (2 errors, 1 warning)


Errors:
  1  http://eslint.org/docs/rules/curly
  1  http://eslint.org/docs/rules/no-process-exit

Warnings:
  1  http://eslint.org/docs/rules/no-unused-vars
"
`;
